order details page

--- a/src/app/cart/cart-duration.html
+++ b/src/app/cart/cart-duration.html
@@ -64,7 +64,7 @@
           <span class="color-blue desc-text number">{{cartData.delivery.selectedJobSite.Phone}}</span>
           <i class="fa fa-user  color-blue heading-text"></i>
 		  				<span class="color-blue desc-text">
-		  					{{cartData.delivery.ContactInfo.firstName}}&nbsp;{{cartData.delivery.ContactInfo.lastName}}
+		  					{{cartData.delivery.contactInfo.firstName}}&nbsp;{{cartData.delivery.contactInfo.lastName}}
 		  				</span>
         </div>
       </div>
