--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -44,10 +44,10 @@
         <i class="fa fa-phone-square zip marker"></i>
         <span class="marker">{{cartData.delivery.selectedJobSite.Phone}}</span>
         <br>
-        <span ng-show="cartData.delivery.ContactInfo.firstName">
+        <span ng-show="cartData.delivery.contactInfo.firstName">
         <i class="fa fa-user marker"></i>
   			<span class="marker">
-  				{{cartData.delivery.ContactInfo.firstName}} {{cartData.delivery.ContactInfo.lastName}}
+  				{{cartData.delivery.contactInfo.firstName}} {{cartData.delivery.contactInfo.lastName}}
   			</span>
         </span>
 
@@ -58,26 +58,26 @@
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time lr-padding lr-padding-small">
         <div class="form-control search-div">
-          <input type="text" placeholder="First Name" ng-model="cartData.delivery.ContactInfo.firstName">
+          <input type="text" placeholder="First Name" ng-model="cartData.delivery.contactInfo.firstName">
             <i class="fa fa-user pull-right"></i>
           </input>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time">
         <div class="form-control search-div">
-          <input type="text" placeholder="Last Name" ng-model="cartData.delivery.ContactInfo.lastName">
+          <input type="text" placeholder="Last Name" ng-model="cartData.delivery.contactInfo.lastName">
           <i class="fa fa-user pull-right"></i>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time lr-padding lr-padding-small">
         <div class="form-control search-div">
-          <input type="text" placeholder="Email" ng-model="cartData.delivery.ContactInfo.email">
+          <input type="text" placeholder="Email" ng-model="cartData.delivery.contactInfo.email">
           <i class="fa fa-envelope-o pull-right"></i>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time">
         <div class="form-control search-div">
-          <input type="text" placeholder="Phone Number" ng-model="cartData.delivery.ContactInfo.phone">
+          <input type="text" placeholder="Phone Number" ng-model="cartData.delivery.contactInfo.phone">
           <i class="fa fa-phone pull-right"></i>
         </div>
       </div>
