--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -1,4 +1,6 @@
 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+  <load-indicator loading="!flags.ordersFetched"></load-indicator>
+  <div ng-show="flags.ordersFetched">
   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
     Quotation
   </div>
@@ -54,52 +56,17 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <td><a href="#/quotes-detail" class="invoice-no">49345</a></td>
-        <td>May 21, 2015</td>
+      <tr ng-repeat="order in orders">
+        <td><a ui-sref="hm.dashboard.quotesDetail({id: order.Order_id })" class="invoice-no">{{order.Order_id}}</a></td>
+        <td>{{order.Request_date}}</td>
         <td>Site 1</td>
-        <td>$928.96</td>
+        <td>${{order.Order_total}}</td>
         <td class="text-right">
-          <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-          <a href="#" class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a></td>
-      </tr>
-      <tr>
-        <td><a href="#/quotes-detail" class="invoice-no">49345</a></td>
-        <td>May 21, 2015</td>
-        <td>Site 1</td>
-        <td>$928.96</td>
-        <td class="text-right">
-          <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-          <a href="#" class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a></td>
-      </tr>
-      <tr>
-        <td><a href="#/quotes-detail" class="invoice-no">49345</a></td>
-        <td>May 21, 2015</td>
-        <td>Site 1</td>
-        <td>$928.96</td>
-        <td class="text-right">
-          <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-          <a href="#" class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a></td>
-      </tr>
-      <tr>
-        <td><a href="#/quotes-detail" class="invoice-no">49345</a></td>
-        <td>May 21, 2015</td>
-        <td>Site 1</td>
-        <td>$928.96</td>
-        <td class="text-right">
-          <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-          <a href="#" class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a></td>
-      </tr>
-      <tr>
-        <td><a href="#/quotes-detail" class="invoice-no">49345</a></td>
-        <td>May 21, 2015</td>
-        <td>Site 1</td>
-        <td>$928.96</td>
-        <td class="text-right">
-          <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+          <a ui-sref="hm.dashboard.quotesDetail({id: order.Order_id })" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
           <a href="#" class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a></td>
       </tr>
       </tbody>
     </table>
   </div>
 </div>
+  </div>
