profile setting ui changes, guest user add jobsite page, header changes, progress bar changes

--- a/src/app/cart/cart-payment.html
+++ b/src/app/cart/cart-payment.html
@@ -43,6 +43,7 @@
       </div>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot" ng-show="cartData.payment.paynow == 'true'"></div>
+    <!-- billing address -->
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding jobsite-details-col toppadding">
       <h3 class="heading-text topmargin">Billing Address</h3>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider-bottom"></div>
