--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -219,7 +219,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cont-rent-btn ">
-					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<button class="btn sign_mybtn all-btn primary-btn profile-save-btn">Save</button>
 						<button class="btn sell-equ all-btn cont-renting">
 							Cancel
