--- a/src/app/portal-access/portal-access.html
+++ b/src/app/portal-access/portal-access.html
@@ -5,7 +5,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3>Account Access</h3>
             <span class="deactive-link">HOME /</span>
-            <span class="deactive-link"> DASHBOARD /</span>
+            <span class="active-link"><a ui-sref="hm.dashboard.main">DASHBOARD</a> /</span>
             <span class="active-link"> ACCOUNT ACCESS</span>
           </div>
         </div>
